
import { BrowserRouter, Routes, Route, Navigate } from 'react-router-dom'
import { AuthProvider, useAuth } from './context/AuthContext'
import BottomNav from './components/BottomNav'
import Onboard from './pages/Onboard'
import Home from './pages/Home'
import Post from './pages/Post'
import Connect from './pages/Connect'
import Profile from './pages/Profile'
import StudentProfile from './pages/StudentProfile'
import ConnectionFeed from './pages/ConnectionFeed'
 import { useEffect } from 'react'
...
